tests/transpiler/x/pas/join_multi.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/transpiler/x/pas/join_multi.pas
join_multi.pas(29,18) Error: Identifier not found "id"
join_multi.pas(29,20) Fatal: Syntax error, ")" expected but ":" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
